--- a/views/home.ejs
+++ b/views/home.ejs
@@ -14,7 +14,7 @@
                         <li class="carousel-item">
                             <a href="/detail/<%= product.id %>">
                                 <img src="<%= product.image_link %>" alt="<%= product.name %>" width="200px"
-                                    height="300" loading="lazy"
+                                    height="300" 
                                     onerror="this.onerror=null; this.src='https://via.placeholder.com/200x300/CCCCCC/FFFFFF?text=No+Image';">
                                 <div class="product-name">
                                     <%= product.name %>
